--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,20 +6,29 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<mdc-top-app-bar class="top-app-bar" fixed [scrollTarget]="fixedContent" [fixedAdjustElement]="fixedContent">
+<mdc-top-app-bar class="top-app-bar" fixed  [fixedAdjustElement]="fixedContent">
   <mdc-top-app-bar-row>
+    <mdc-top-app-bar-section align="left">
+      <a href="#faq" mdc-button outlined class="button-app-bar button">
+        <span mdcButtonLabel>FAQ</span>
+         <mdc-icon>keyboard_arrow_down</mdc-icon>
+      </a>
+      <a href="#documentation" mdc-button outlined class="button-app-bar button">
+        <span mdcButtonLabel>Documentation</span>
+        <mdc-icon>keyboard_arrow_down</mdc-icon>
+      </a>
+      <a href="#features" mdc-button outlined class="button-app-bar button">
+        <span mdcButtonLabel>Features</span>
+        <mdc-icon>keyboard_arrow_down</mdc-icon>
+      </a>
+
+    </mdc-top-app-bar-section>
     <mdc-top-app-bar-section align="end">
-      <a href="#faq" mdc-button>
-        FAQ
+      <a mdc-button unelevated class="button-primary button">
+        <span mdcButtonLabel>Sign Up</span>
       </a>
-      <a href="#documentation" mdc-button>
-        Documentation
-      </a>
-      <a href="#features" mdc-button>
-        Features
-      </a>
-      <a mdc-button>
-        Get Api Keys
+      <a mdc-button outlined>
+        Login
       </a>
     </mdc-top-app-bar-section>
   </mdc-top-app-bar-row>
