--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,9 @@
     max-width: 720px;
     margin: auto;
 }
-
+.button:not(:last-child) {
+    margin-right: 0.75rem;
+}
 section:not(:first-child) {
     padding-top: 68px;
 }
