--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -1,54 +1,25 @@
-@use '@material/typography/mdc-typography';
-@use '@material/typography';
+@use "./component-variables";
+
+$mdc-typography-font-family: unquote("Cousine, sans-serif");
 $mdc-typography-styles-headline1: (
-  font-family: unquote("Raleway"),
-  font-size: 97
-);
-$mdc-typography-styles-headline2: (
-  font-family: unquote("Raleway"),
-  font-size: 61
-);
-$mdc-typography-styles-headline3: (
-  font-family: unquote("Raleway"),
-  font-size: 48
-);
-$mdc-typography-styles-headline4: (
-  font-family: unquote("Raleway"),
-  font-size: 34
-);
-$mdc-typography-styles-headline5: (
-  font-family: unquote("Raleway"),
-  font-size: 24
-);
-$mdc-typography-styles-headline6: (
-  font-family: unquote("Raleway"),
-  font-size: 20
-);
-$mdc-typography-styles-body1: (
-  font-family: unquote("Cousine"),
-  font-size: 16
-);
-$mdc-typography-styles-body2: (
-  font-family: unquote("Cousine"),
-  font-size: 14
-);
-$mdc-typography-styles-subtitle1: (
-  font-family: unquote("Raleway"),
-  font-size: 16
-);
-$mdc-typography-styles-subtitle2: (
-  font-family: unquote("Raleway"),
-  font-size: 14
-);
-$mdc-typography-styles-button: (
-  font-family: unquote("Cousine"),
-  font-size: 14
-);
-$mdc-typography-styles-overline: (
-  font-family: unquote("Cousine"),
-  font-size: 10
-);
-$mdc-typography-styles-caption: (
-  font-family: unquote("Cousine"),
-  font-size: 12
-);
+    font-family: unquote("Raleway"),
+    font-size: 97
+  );
+
+
+.mdc-typography {
+    font-family: component-variables.$mdc-typography-font-family;
+
+}  
+
+body {
+    --mdc-typography-headline3-font-family: unquote("Raleway");
+}
+.mdc-typography--headline3{
+    font-family: unquote("Raleway");
+    font-size: 48;
+    
+}
+
+
+@import '@material/typography/mdc-typography';
