completed features without images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,21 +8,23 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <mdc-top-app-bar class="top-app-bar" fixed  [fixedAdjustElement]="fixedContent">
   <mdc-top-app-bar-row>
-    <mdc-top-app-bar-section align="left">
-      <a href="#faq" mdc-button outlined class="button-app-bar button">
-        <span mdcButtonLabel>FAQ</span>
-         <mdc-icon>keyboard_arrow_down</mdc-icon>
-      </a>
-      <a href="#documentation" mdc-button outlined class="button-app-bar button">
-        <span mdcButtonLabel>Documentation</span>
-        <mdc-icon>keyboard_arrow_down</mdc-icon>
-      </a>
-      <a href="#features" mdc-button outlined class="button-app-bar button">
-        <span mdcButtonLabel>Features</span>
-        <mdc-icon>keyboard_arrow_down</mdc-icon>
-      </a>
-
-    </mdc-top-app-bar-section>
+    <section class="responsive-wrapper">
+      <mdc-top-app-bar-section align="left">
+        <a href="#faq" mdc-button outlined class="button-app-bar button">
+          <span mdcButtonLabel>FAQ</span>
+           <mdc-icon>keyboard_arrow_down</mdc-icon>
+        </a>
+        <a href="#documentation" mdc-button outlined class="button-app-bar button">
+          <span mdcButtonLabel>Documentation</span>
+          <mdc-icon>keyboard_arrow_down</mdc-icon>
+        </a>
+        <a href="#features" mdc-button outlined class="button-app-bar button">
+          <span mdcButtonLabel>Features</span>
+          <mdc-icon>keyboard_arrow_down</mdc-icon>
+        </a>
+  
+      </mdc-top-app-bar-section>
+    </section>
     <mdc-top-app-bar-section align="end">
       <a mdc-button unelevated class="button-primary button">
         <span mdcButtonLabel>Sign Up</span>
