--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,21 +1,47 @@
 <div mdcHeadline3>Features</div>
-<mdc-list twoLine>
-    <mdc-list-item>
-        <mdc-list-item-text secondaryText="Hello World">Display Link Previews from any website.</mdc-list-item-text>
-    </mdc-list-item>
+<div class="feature-container">
+    <div class="grid-item grid-item--1">
+        <p mdcHeadline1>Place your image here</p>
+    </div>
+    <div class="grid-item grid-item--2">
+        <p mdcHeadline4>Get important information about a website with just one request.</p>
+        <p mdcBody1>Grab the meta data from any website as quickly as possible without hassle</p>
+    </div>
+
+    <div class="grid-item grid-item--3">
+        <h4 mdcHeadline4>Never have another broken link again.</h4>
+        <p mdcBody1>Cache websites and url links, and never break another user experience again.</p>
+    </div>
+
+    <div class="grid-item grid-item--4">
+        <p mdcHeadline1>Place your image here.</p>
+    </div>
 
     
-    <mdc-list-item>
-        <mdc-list-item-text secondaryText="Hello World">Cache and save web pages</mdc-list-item-text>
-    </mdc-list-item>
+    <div class="grid-item grid-item--5">
+        <p mdcHeadline1>Place your image here.</p>
+    </div>
 
-    
-    <mdc-list-item>
-        <mdc-list-item-text secondaryText="Hello World">Save Web Pages with our plugin.</mdc-list-item-text>
-    </mdc-list-item>
+    <div class="grid-item grid-item--6">
+        <h4 mdcHeadline4>Quickly save links with our plug in.</h4>
+        <p mdcBody1>Use our plugin to save tweets, blogs and other links for later use.</p>
+    </div>
 
-    
-    <mdc-list-item>
-        <mdc-list-item-text secondaryText="Hello World">Some other feature to justify price.</mdc-list-item-text>
-    </mdc-list-item>
-</mdc-list>
+
+ 
+
+ 
+
+
+    <div class="grid-item grid-item--7">
+        <h4 mdcHeadline4>High Speed, High volume api.</h4>
+        <p mdcBody1>Process thousands of requests, at a cost effective, scaleable price.</p>
+    </div>
+
+    <div class="grid-item grid-item--8">
+        <p mdcHeadline1>Place your image here.</p>
+    </div>
+
+
+  
+</div>
