--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,5 @@
 @use "components/list";
 @use "components/button";
 @use "body";
+@use "@material/typography/mdc-typography";
 @use "@angular-mdc/theme/material";
