made minor changes to the pricing component. Added a dummy demo text field to be hooked up to the api. Removed FAQ to add a See Our Demo Button.

--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,7 +1,7 @@
 <div mdcHeadline3>Features</div>
 <div class="feature-container">
-    <div class="grid-item grid-item--1">
-        <p mdcHeadline1>Place your image here</p>
+    <div  class="grid-item grid-item--1">
+       <img src="/assets/images/161.png" >
     </div>
     <div class="grid-item grid-item--2">
         <p mdcHeadline4>Get important information about a website with just one request.</p>
@@ -14,23 +14,26 @@
     </div>
 
     <div class="grid-item grid-item--4">
-        <p mdcHeadline1>Place your image here.</p>
+        <img src="/assets/images/173.png">
     </div>
 
     
-    <div class="grid-item grid-item--5">
+    <!-- <div class="grid-item grid-item--5">
         <p mdcHeadline1>Place your image here.</p>
     </div>
 
     <div class="grid-item grid-item--6">
         <h4 mdcHeadline4>Quickly save links with our plug in.</h4>
         <p mdcBody1>Use our plugin to save tweets, blogs and other links for later use.</p>
+    </div> -->
+
+
+ 
+
+    
+    <div class="grid-item grid-item--8">
+        <img src="/assets/images/151.png">
     </div>
-
-
- 
-
- 
 
 
     <div class="grid-item grid-item--7">
@@ -38,9 +41,6 @@
         <p mdcBody1>Process thousands of requests, at a cost effective, scaleable price.</p>
     </div>
 
-    <div class="grid-item grid-item--8">
-        <p mdcHeadline1>Place your image here.</p>
-    </div>
 
 
   
