--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
   <mdc-top-app-bar-row>
     <section class="responsive-wrapper">
       <mdc-top-app-bar-section align="left">
-        <a href="#faq" mdc-button outlined class="button-app-bar button">
-          <span mdcButtonLabel>FAQ</span>
+        <a href="#demo" mdc-button outlined class="button-app-bar button">
+          <span mdcButtonLabel>See our Demo</span>
            <mdc-icon>keyboard_arrow_down</mdc-icon>
         </a>
         <a href="#documentation" mdc-button outlined class="button-app-bar button">
@@ -37,6 +37,9 @@
 </mdc-top-app-bar>
 <div #fixedContent class="body-container">
 
+  <section id="demo">
+    <app-demo></app-demo>
+  </section>
   <section id="features">
     <app-features>
 
@@ -49,6 +52,9 @@
   </section>
   <section id="faq">
     <app-faq></app-faq>
+  </section>
+  <section id="pricing">
+    <app-pricing></app-pricing>
   </section>
  
 </div>
