--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -1,8 +1,16 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 html {
     scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
   }
+
+// @media(max-width: 400px) {
+
+// }
