made changes to the UI and changed the font to work sans for it to be more humanly readable.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,13 @@
 @use "components/list";
 @use "components/text-field";
 @use "components/card";
+@use "components/elevation";
+@use "components/iconbutton";
+@use "components/modal";
+@use "components/select";
 @use "body";
 
 @use "@material/typography/mdc-typography";
 @use "@angular-mdc/theme/material";
+
+html, body { height: 100%; }
