--- a/src/styles/components/_list.scss
+++ b/src/styles/components/_list.scss
@@ -1,2 +1,5 @@
 @use '@material/list/mdc-list';
+@use '@material/menu-surface/mdc-menu-surface';
+@use '@material/menu/_index' as menu;
+@use '@material/menu/mdc-menu';
 @use '@material/list/_index' as list;
