--- a/src/styles/components/_iconbutton.scss
+++ b/src/styles/components/_iconbutton.scss
@@ -1,2 +1,7 @@
 @use '@material/icon-button/mdc-icon-button';
 @use '@material/icon-button/_index' as icon-button;
+
+.mdc-text-field__icon--trailing {
+    position: absolute;
+    left: initial;
+}
