completed building api key page and added a top app bar to the dashboard that should allow you to logout or upgrade your plan when you'd like

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,39 @@
-<div class="mdc-drawer-app">
+<mdc-top-app-bar [mdcElevation]="2" [fixedAdjustElement]="root" class="top-app-bar" [scrollTarget]="root"
+    style="padding: 0 16px; z-index: 8" fixed>
+    <mdc-top-app-bar-row>
+        <mdc-top-app-bar-section>
+            <span style="font-family: 'Inconsolata, monospace'; font-size: 1.8rem">teenielink.dev</span>
+        </mdc-top-app-bar-section>
+        <mdc-top-app-bar-section align="end">
+            <div mdcMenuSurfaceAnchor #loginAnchor>
+                <button mdc-button (click)="login.open = !login.open">
+                    <mdc-button-label>
+                        grantpablo4@gmail.com
+                    </mdc-button-label>
+                    <mdc-icon>keyboard_arrow_down</mdc-icon>
+
+
+                </button>
+                <mdc-menu #login [anchorElement]="loginAnchor" (selected)="onMenuSelect($event)"
+                    anchorCorner="bottomStart" class="popup-menu" closeSurfaceOnSelection="true">
+                    <mdc-list>
+                        <ng-container *ngFor="let route of loginRoutes">
+                            <mdc-list-item (click)="navigate(route)" class="menu-list-item">
+                                {{route.label}}
+                                <mdc-icon mdcListItemGraphic>{{route.icon}}</mdc-icon>
+                            </mdc-list-item>
+                        </ng-container>
+                    </mdc-list>
+                </mdc-menu>
+            </div>
+
+
+
+
+        </mdc-top-app-bar-section>
+    </mdc-top-app-bar-row>
+</mdc-top-app-bar>
+<div class="mdc-drawer-app" #root>
     <mdc-drawer>
         <mdc-drawer-content>
             <mdc-list>
@@ -7,12 +42,12 @@
                     <span>{{route.label}}</span>
                 </mdc-list-item>
             </mdc-list>
-    
+
         </mdc-drawer-content>
     </mdc-drawer>
-    
+
     <div mdcDrawerAppContent>
         <router-outlet></router-outlet>
-        
+
     </div>
 </div>
