--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -10,3 +10,6 @@
     $styles-button: (font-family: unquote("Raleway"), text-transform: "capitalize")
     
     );
+.text--secondary {
+  color: #999999;
+}
