--- a/src/app/keys/keys.component.html
+++ b/src/app/keys/keys.component.html
@@ -1,24 +1,44 @@
+<div class="menu-bar">
+    <button mdc-button outlined id="create" (click)="create()">
+        <mdc-button-label>
+            Create
+        </mdc-button-label>
+        <mdc-icon>add</mdc-icon>
+    </button>
+</div>
 
-    <div class="menu-bar">
-        <button mdc-button outlined id="create" (click)="create()">
-            <mdc-button-label>
-                Create
-            </mdc-button-label>
-            <mdc-icon>keyboard_arrow_down</mdc-icon>
-        </button>
-    </div>
-    
-    <div class="information-list">
-        <table mat-table [dataSource] = "($keys | async)?.data">
+<div class="information-list" [mdcElevation]="2">
+    <div *ngIf="($keys | async)?.data?.length > 0; else noKeys">
+        <table mat-table [dataSource]="($keys | async)?.data">
             <!--Date created-->
-            <ng-container>
-                <th mat-header-cell *matHeaderCellDef>Date Created</th>
-                <td mat-cell *matCellDef="let element">{{element.inserted_at}}</td>
+            <ng-container matColumnDef="date created">
+                <th mat-header-cell *matHeaderCellDef><span class="column-header" mdcBody1>Date Created</span></th>
+                <td mat-cell *matCellDef="let element"><span class="column-row"> {{element.inserted_at | date: 'MMM d, y'}}</span></td>
+    
             </ng-container>
-
-            <ng-container>
-                <th mat-header-cell *matHeaderCellDef>Key</th>
-                <td mat-cell *matCellDef="let element">{{element.api_key}}</td>
+    
+            <ng-container matColumnDef="keys">
+                <th mat-header-cell *matHeaderCellDef><span class="column-header" mdcBody1>Keys</span></th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="column-row">
+                        <span class="column-row">{{element.api_key}}</span>
+                        <button mdc-icon-button icon="file_copy"></button>
+                        <button mdc-icon-button icon="delete" (click)="delete(element)"></button>
+    
+                    </div>
+                </td>
             </ng-container>
+    
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
+    <ng-template #noKeys>
+        <div id="empty-keys">
+            <mdc-icon class="icon--large">https</mdc-icon>
+            <span mdcHeadline4>You don't have any keys, yet. Let's fix that!</span>
+            <span class="text--secondary" mdcBody1 style="max-width: 400px;">You can create an api key by clicking the create button above.</span>
+        </div>
+    </ng-template>
+
+</div>
