--- a/src/app/keys/keys.component.scss
+++ b/src/app/keys/keys.component.scss
@@ -32,3 +32,40 @@ div.information-list {
 .section {
     max-width: 780px;
 }
+
+table {
+    width: 100%;
+}
+
+.information-list {
+    min-height: 360px;
+}
+
+.column-header {
+    font-weight: 500;
+    font-family: unquote($string: 'Raleway, sans-serif');
+    font-size: 1.2rem;
+}
+
+span.column-row {
+    font-weight: 400;
+    font-family: unquote($string: 'Inconsolata, sans-serif');
+    font-size: 1rem;
+}
+
+#empty-keys {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+div.column-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
