--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -1,26 +1,25 @@
-<mdc-dialog class="signup-dialog">
-    <mdc-dialog-container>
-        <mdc-dialog-surface>
-            <mdc-dialog-content>
-                <form #signUpForm>
-                    <mdc-form-field fluid>
-                        <mdc-text-field class="text-field--outlined" outlined
-                            label="Email"></mdc-text-field>
-                    </mdc-form-field>
-                    <mdc-form-field fluid>
-                        <mdc-text-field class="text-field--outlined" outlined
-                            label="Password">
+<form [formGroup]="loginForm">
+    <mdc-form-field fluid>
+        <mdc-text-field class="text-field--outlined" outlined label="Email" formControlName="email"></mdc-text-field>
+    </mdc-form-field>
+    <mdc-form-field fluid>
+        <mdc-text-field class="text-field--outlined" outlined label="Password"
+            [type]="showPassword ? 'text': 'password'"  formControlName="password">
+            <button mdcIconButton mdcTextFieldIcon trailing [on]="true" (click)="showPassword = !showPassword">
+                <mdc-icon mdcIconOn>visibility</mdc-icon>
+                <mdc-icon>visibility_off</mdc-icon>
+            </button>
+        </mdc-text-field>
+    </mdc-form-field>
+    <p>
+        <a [routerLink]="['/password_reset']" mdcCaption>Forgot my password</a>
 
-                        </mdc-text-field>
-                    </mdc-form-field>
-                    <a [routerLink]="['/password_reset']" mdcCaption>Forgot Password</a>
-                </form>
-            </mdc-dialog-content>
+    </p>
+</form>
 
-            <span id="signup-link" mdcCaption>Don't have an account? <a [routerLink]="['/signup']">Sign Up here.</a></span>
-            <mdc-dialog-actions>
-                <button mdcDialogButton mdcDialogAction="accept" unelevated>Log in</button>
-            </mdc-dialog-actions>
-        </mdc-dialog-surface>
-    </mdc-dialog-container>
-</mdc-dialog>
+
+<span id="signup-link" mdcCaption>Don't have an account? <a [routerLink]="['/signup']" (click)="close()">Sign Up
+        here.</a></span>
+<mdc-dialog-actions>
+    <button mdcDialogButton mdcDialogAction="accept" unelevated (click)="login()" [disabled]="loginForm.invalid">Log in</button>
+</mdc-dialog-actions>
