--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,8 @@
 @use "components/select";
 @use "components/grid";
 @use "components/menu";
+@use "components/table";
+@use "components/checkbox";
 @use "body";
 
 @use "@material/typography/mdc-typography";
