--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -1,2 +1,13 @@
 @use '@material/select/mdc-select';
 @use '@material/select/_index' as select;
+
+.select-width {
+    min-width: 200px;
+    width: 100%;
+    
+}
+
+
+.select--outlined {
+   height: 48px;
+}
