--- a/src/styles/components/_typography.scss
+++ b/src/styles/components/_typography.scss
@@ -13,3 +13,12 @@
 .text--secondary {
   color: #999999;
 }
+
+.text--title__small {
+  font-family: unquote("'Raleway', sans-serif");
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 2rem;
+
+}
+
