todo: adding error messages where necessary

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 
 <div class="page-container animation--entry--page-container">
-    <span mdcHeadline3 style="margin-top: 12px;" class="animation--entry-title-container">Welcome to <font style="font-family: Inconsolata, monospace">teenielink.dev</font></span>
+    <span mdcHeadline3 style="margin-top: 12px;" class="animation--entry-title-container">Welcome to <span style="font-family: Inconsolata, monospace">teenielink.dev</span></span>
     <span mdcHeadline4 class="animation--entry-subtitle-container subtitle">Sign Up.</span>
 </div>
 <div class="signup-container">
