--- a/src/app/whitelist/whitelist.component.html
+++ b/src/app/whitelist/whitelist.component.html
@@ -1,32 +1,34 @@
-<div class="menu-bar">
-    <mdc-text-field class="primary-text-field--outlined text-field--restricted__360" 
-    label="Origin" placeholder="Enter your host or ip address"
-        outlined>
+<form class="menu-bar" [formGroup]="whitelistFormGroup">
+    <mdc-form-field>
+        <mdc-text-field class="text-field__100 text-field--restricted__360" formControlName="whitelist" label="Origin"
+            [placeholder]="placeholder">
 
-    </mdc-text-field>
+        </mdc-text-field>
+        <span *ngIf="whitelistFormGroup.invalid && validationMessage != null">{{validationMessage}}</span>
+    </mdc-form-field>
 
-    <mdc-select outlined placeholder="Origin Type" class="select--outlined">
-        <mdc-menu [anchorMargin]="{top: 14}" class="select-width">
+
+    <mdc-select #originSelect placeholder="Origin Type" formControlName="origin_type" class="select--outlined" outlined
+        (selectionChange)="onSelectionChange($event)">
+        <mdc-menu [anchorMargin]="{top: 54}" class="select-width">
             <mdc-list>
-                <mdc-list-item value="ipv4">
-                    ipv4
+                <mdc-list-item [value]="origin_type" *ngFor="let origin_type of originTypes">
+                    {{origin_type?.origin_name}}
                 </mdc-list-item>
 
-                <mdc-list-item value="url">
-                    url
-                </mdc-list-item>
 
             </mdc-list>
         </mdc-menu>
     </mdc-select>
-    <button mdc-button unelevated id="create" (click)="create()" class="bar-button button-primary button--text-field">
+    <button mdc-button unelevated id="create" (click)="create()" class="bar-button button-primary button--text-field"
+        [disabled]="whitelistFormGroup.invalid">
         <mdc-button-label>
             Create Address
         </mdc-button-label>
     </button>
 
 
-</div>
+</form>
 <div>
     <div class="text--title__small text--secondary">Restrict IP Setting</div>
     <mdc-select outlined placeholder="">
@@ -61,7 +63,8 @@
                         {{whitelist.ip_address}}
                     </td>
 
-                    <td mdcDataCell>
+                    <td mdcDataTableCell
+                        style="font-family: 'Inconsolata', monospace; font-size: 1.1rem; font-weight: 500">
                         {{whitelist.type}}
                     </td>
 
